compilable version (visualization still broken)
--HG--
branch : jgraph5_refactor